--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "/index.js",
   "devDependencies": {},
   "keywords": [],
-  "name": "tictactoe",
+  "name": "React_Example_TicTacToe",
   "description": null,
   "version": "0.0.4",
   "scripts": {
@@ -15,5 +15,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
